lorm-macros/tests/compile_fail/missing_belongs_to_target.rs
use lorm::ToLOrm;
use sqlx::FromRow;
use uuid::Uuid;

#[derive(Debug, Default, Clone, FromRow, ToLOrm)]
pub struct Link {
    #[lorm(belongs_to)]
    pub other_id: Uuid,
}

fn main() {}
